BUG#18581 (Creation of system tables recorded in binlog causing slave failure): Not replicating the mysql database *at all* any more. All changes to mysql tables are replicated by replicating the statements that do the changes.